Initial (real) index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello world
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>atvaccaro's Personal Webpage</title>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	</head>
+	
+	<body>
+		Hello, world!
+    </body>
+</html>
