--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<title>atvaccaro's Personal Webpage</title>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	</head>
-	
+
 	<body>
 		Hello, world!
+
+		<a href="coursework.html">My coursework</a>
     </body>
 </html>
