--- a/coursework.html
+++ b/coursework.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>atvaccaro's Coursework</title>
+        <title>Relevant Coursework</title>
+
+        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     </head>
 
     <body>
-        SE 3354
-        CS 4348
+        SE 3354 <br>
+        CS 4348 <br>
         CS 4341
     </body>
 </html>
