--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 	<head>
 		<title>atvaccaro's Personal Webpage</title>
+
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	</head>
 
 	<body>
-		Hello, world!
+		Hello, world! <br>
 
 		<a href="coursework.html">My coursework</a>
+
+		<object data="resume.pdf" type="application/pdf" width="100%" height="100%">
+		  <p>It appears you don't have a PDF plugin for this browser. <a href="resume.pdf">Click here to download the PDF file instead.</a></p>
+		</object>
+		
     </body>
 </html>
