--- a/coursework.html
+++ b/coursework.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Relevant Coursework</title>
+        <title>atvaccaro's personal webpage</title>
 
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     </head>
 
     <body>
-        SE 3354 <br>
-        CS 4348 <br>
-        CS 4341
+        <ul>
+            <li>SE 3354 - Computer Architecture</li>
+            CS 4348
+            CS 4341
+        </ul>
     </body>
 </html>
