--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>atvaccaro's Personal Webpage</title>
+		<title>atvaccaro's personal webpage</title>
 
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	</head>
 
 	<body>
-		Hello, world! <br>
+        <h1>the personal webpage of Andrew Vaccaro</h1>
+        
 
-		<a href="coursework.html">My coursework</a>
+        <h3>Links</h3>
+        <a href="https://www.github.com/atvaccaro">my github account</a>
+        <a href="https://www.linkedin.com/pub/andrew-vaccaro/103/187/510">my LinkedIn page</a>
+		<a href="coursework.html">my coursework</a>
+        <a href="resume.pdf">my resume</a>
 
-		<object data="resume.pdf" type="application/pdf" width="100%" height="100%">
+		<!-- <object data="resume.pdf" type="application/pdf" width="100%" height="100%">
 		  <p>It appears you don't have a PDF plugin for this browser. <a href="resume.pdf">Click here to download the PDF file instead.</a></p>
-		</object>
+		</object> -->
 		
     </body>
 </html>
