Updated links, added initial CSS

--- a/coursework.html
+++ b/coursework.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>atvaccaro's personal webpage</title>
+        <title>relevant coursework</title>
 
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     </head>
 
     <body>
+        <h3>a list of my relevant coursework</h3>
         <ul>
-            <li>SE 3354 - Computer Architecture</li>
-            CS 4348
-            CS 4341
+            <li>CS 1337 - Computer Science I</li>
+            <li>CS 2305 - Discrete Mathematics for Computing I</li>
+            <li>CS 2336 - Computer Science II</li>
+            <li>SE 3306 - Mathematical Foundations of Software Engineering</li>
+            <li>SE 3340 - Computer Architecture</li>
+            <li>CS 3345 - Data Structures and Introduction to Algorithmic Analysis</li>
+            <li>SE 3354 - Software Engineering</li>
+            <li>SE 3376 - C/C++ Programming in a UNIX Environment</li>
+            <li>CS 4341 - Digital Logic and Computer Design</li>
+            <li>CS 4348 - Operating System Concepts</li>
         </ul>
     </body>
 </html>
