Added courses and made link buttons

--- a/coursework.html
+++ b/coursework.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>relevant coursework</title>
+        <title>coursework</title>
 
         <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     </head>
 
     <body>
         <h3>a list of my relevant coursework</h3>
+        <h5>(* = currently taking)</h5>
         <ul>
+            <!-- Currently enrolled -->
+            <li>ECS 3361* - Social Issues and Ethics in Computer Science and Engineering</li>
+            <li>SE 4351* - Requirements Engineering</li>
+            <li>SE 4352* - Software Architecture and Design    </li>
+            <li>SE 4367* - Software Testing, Verification, Validation and Quality Assurance</li>
+            
+            <!-- Past coursework -->
             <li>CS 1337 - Computer Science I</li>
             <li>CS 2305 - Discrete Mathematics for Computing I</li>
             <li>CS 2336 - Computer Science II</li>
+            <li>MATH 2418 - Linear Algebra</li>
             <li>SE 3306 - Mathematical Foundations of Software Engineering</li>
-            <li>SE 3340 - Computer Architecture</li>
-            <li>CS 3345 - Data Structures and Introduction to Algorithmic Analysis</li>
+            <li>CS 3340 - Computer Architecture</li>
+            <li>SE 3341 - Probability and Statistics in Computer Science and Software Engineering</li>
+            <li>SE 3345 - Data Structures and Introduction to Algorithmic Analysis</li>
             <li>SE 3354 - Software Engineering</li>
             <li>SE 3376 - C/C++ Programming in a UNIX Environment</li>
+            <li>ECS 3390 - Professional and Technical Communication</li>
             <li>CS 4341 - Digital Logic and Computer Design</li>
-            <li>CS 4348 - Operating System Concepts</li>
+            <li>SE 4348 - Operating System Concepts</li>
         </ul>
     </body>
+    
+    <footer>
+        <a href="index.html">Main page</a>
+    </footer>
 </html>
