--- a/index.html
+++ b/index.html
@@ -11,31 +11,48 @@
         <p id="intro">Software engineering student at the University of Texas at Dallas. McDermott Scholars class of 2013. I will continue to update this page as I learn more HTML and CSS (and who knows, maybe even JavaScript).</p>
         
         </br>
-        <h3>links</h3>
-        <div class="grid grid-pad">
-            <div class="col-1-2 link-div">
-                <a href="https://www.github.com/atvaccaro"  class="link">my GitHub account<span class="link-block"></span></a>
-                <p>the best way to see my current and past projects</p>
+        <h2>links</h2>
+        <div class="grid">
+            <div class="grid-row">
+                <div class="col-l link-div">
+                    <a href="https://www.github.com/atvaccaro"  class="link">my GitHub account<span class="link-block-span"></span></a>
+                    <p>the best way to see my current and past projects</p>
+                </div>
+                <div class="col-r link-div">
+                    <a href="https://www.linkedin.com/pub/andrew-vaccaro/103/187/510" class="link">my LinkedIn page<span class="link-block-span"></span></a>
+                    <p>for what it's worth</p>
+                </div>
             </div>
-            <div class="col-1-2 link-div">
-                <a href="https://www.linkedin.com/pub/andrew-vaccaro/103/187/510" class="link">my LinkedIn page<span class="link-block"></span></a>
-                <p>as much as I dislike LinkedIn</p>
+            
+            <div class="grid-row">
+                <div class="col-l link-div">
+                    <a href="AndrewVaccaro_resume.pdf"  class="link">my resume<span class="link-block-span"></span></a>
+                    <p>my resume in pdf format (courtesy of LaTeX)</p>
+                </div>
+                <div class="col-r link-div">
+                    <a href="coursework.html"  class="link">my coursework<span class="link-block-span"></span></a>
+                    <p>a list of my relevant coursework at UTD</p>
+                </div>
             </div>
-            <div class="col-1-2 link-div">
-                <a href="http://minecraftu.org/"  class="link">the MinecraftU website<span class="link-block"></span></a>
-                <p>the website for a start-up that I have been working for</p>
+            <div class="grid-row">
+                <div class="col-l link-div">
+                    <a href="http://mcd.joshcai.com" class="link">the McDermott network<span class="link-block-span"></span></a>
+                    <p>a networking webapp that I helped create for the McDermott program</p>
+                </div>
+                <div class="col-r link-div">
+                    <a href="#" class="link">placeholder<span class="link-block-span"></span></a>
+                    <p>placeholder for future project</p>
+                </div>
             </div>
-            <div class="col-1-2 link-div">
-                <a href="https://mcdermottscholars.wordpress.com/"  class="link">the McDermott blog<span class="link-block"></span></a>
-                <p>a blog run by the students of the McDermott Scholars program at UTD</p>
-            </div>
-            <div class="col-1-2 link-div">
-                <a href="AndrewVaccaro_resume.pdf"  class="link">my resume<span class="link-block"></span></a>
-                <p>my resume in pdf format</p>
-            </div>
-            <div class="col-1-2 link-div">
-		        <a href="coursework.html"  class="link">my coursework<span class="link-block"></span></a>
-                <p>a list of my relevant coursework at UTD</p>
+            <div class="grid-row">
+                <div class="col-l link-div">
+                    <a href="http://minecraftu.org/"  class="link">the MinecraftU website<span class="link-block-span"></span></a>
+                    <p>the website for a start-up that I have been working for</p>
+                </div>
+                <div class="col-r link-div">
+                    <a href="https://mcdermottscholars.wordpress.com/"  class="link">the McDermott blog<span class="link-block-span"></span></a>
+                    <p>a blog run by the students of the McDermott Scholars program at UTD</p>
+                </div>
             </div>
         </div>
     </body>
