--- a/index.html
+++ b/index.html
@@ -1,41 +1,53 @@
 <!doctype html>
 <html>
 	<head>
-		<title>atvaccaro</title>
+		<title>Andrew Vaccaro</title>
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/a26f20882e.js"></script>
+        <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
+        <!--<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">-->
+        <!--<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	</head>
 
-	<body>
-        <h1>the personal webpage of Andrew Vaccaro</h1>
-        <p id="intro">Software engineering student at the University of Texas at Dallas. McDermott Scholars class of 2013. I will continue to update this page as I learn more HTML and CSS (and who knows, maybe even JavaScript).</p>
-        
-        </br>
-        <h3>links</h3>
-        <div class="grid grid-pad">
-            <div class="col-1-2 link-div">
-                <a href="https://www.github.com/atvaccaro"  class="link">my GitHub account<span class="link-block"></span></a>
-                <p>the best way to see my current and past projects</p>
+	<body class="text-center">
+        <h1>Andrew Vaccaro</h1>
+        <img src="me.jpg" class="img-circle profile-pic padding-">
+        <p id="intro">B.S. in Software Engineering from the <a href="http://www.utdallas.edu/">University of Texas at Dallas</a>. Member of the <a href="https://www.utdallas.edu/mcdermott/">McDermott Scholars</a> class of 2013. Software engineer at Hewlett Packard Enterprise (Software-Defined and Cloud Group) in Denver, Colorado.</p>
+
+        <h3>Links</h3>
+        <a href="https://www.github.com/atvaccaro"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+        <a href="https://www.gitlab.com/atvaccaro"><i class="fa fa-gitlab fa-4x" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/andrew-vaccaro-510187103/"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
+        <div class="row">
+            <div class="col-md-6 text-center">
+                <a href="https://mcdermottscholars.wordpress.com/">The McDermott Blog</a>
+                <p>A blog written by current students in my scholarship program during college. The (usually) weekly blog showcases the experiences facilitated by the program.</p>
             </div>
-            <div class="col-1-2 link-div">
-                <a href="https://www.linkedin.com/pub/andrew-vaccaro/103/187/510" class="link">my LinkedIn page<span class="link-block"></span></a>
-                <p>as much as I dislike LinkedIn</p>
+            <div class="col-md-6 text-center">
+                <a href="AndrewVaccaro_Resume.pdf">My resume</a>
+                <p>Describes my education, technical skills, and past work. I'm always willing to consider new career and project opportunities.</p>
             </div>
-            <div class="col-1-2 link-div">
-                <a href="http://minecraftu.org/"  class="link">the MinecraftU website<span class="link-block"></span></a>
-                <p>the website for a start-up that I have been working for</p>
+        </div>
+        <h3>Projects</h3>
+        <div class="row">
+            <div class="col-md-6 text-center">
+                <a href="http://minecraftu.org/">Minecraft U</a>
+                <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our free, open-source curriculum can <a href="https://github.com/MinecraftU/mcu-curriculum">here</a> on Github. </p>
             </div>
-            <div class="col-1-2 link-div">
-                <a href="https://mcdermottscholars.wordpress.com/"  class="link">the McDermott blog<span class="link-block"></span></a>
-                <p>a blog run by the students of the McDermott Scholars program at UTD</p>
+            <div class="col-md-6 text-center">
+                <a href="https://github.com/atvaccaro/copper-mod">CopperMod</a>
+                <p>A Minecraft mod I created while teaching Java at UTD summer camps. I was the lead instructor for the Minecraft modding camps for two summers.</p>
             </div>
-            <div class="col-1-2 link-div">
-                <a href="AndrewVaccaro_resume.pdf"  class="link">my resume<span class="link-block"></span></a>
-                <p>my resume in pdf format</p>
-            </div>
-            <div class="col-1-2 link-div">
-		        <a href="coursework.html"  class="link">my coursework<span class="link-block"></span></a>
-                <p>a list of my relevant coursework at UTD</p>
+        </div>
+        <div class="row">
+            <div class="col-md-6 text-center">
+                <a href="mcdermott.andrewvaccaro.com">McDermott Network</a>
+                <p>A finalist weekend feedback application that evolved into a McDermott program information directory. The source code can be found on Github <a href="https://github.com/mcdermott-scholars/mcdermott">here</a>.</p>
             </div>
         </div>
     </body>
