--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body class="text-center">
         <h1>Andrew Vaccaro</h1>
         <img src="me.jpg" class="img-circle profile-pic padding-">
-        <p id="intro">B.S. in Software Engineering from the <a href="http://www.utdallas.edu/">University of Texas at Dallas</a>. Member of the <a href="https://www.utdallas.edu/mcdermott/">McDermott Scholars</a> class of 2013. Software engineer at Hewlett Packard Enterprise (Software-Defined and Cloud Group) in Denver, Colorado.</p>
+        <p id="intro">B.S. in Software Engineering from the <a href="http://www.utdallas.edu/">University of Texas at Dallas</a>. Member of the <a href="https://www.utdallas.edu/mcdermott/">McDermott Scholars</a> class of 2013. Software engineer at <a href="https://www.hpe.com/us/en/home.html">Hewlett Packard Enterprise</a> in Denver, Colorado.</p>
 
         <h3>Links</h3>
         <a href="https://www.github.com/atvaccaro"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
