--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>A blog written by current students in my scholarship program during college. The (usually) weekly blog showcases the experiences facilitated by the program.</p>
             </div>
             <div class="col-md-6 text-center">
-                <a href="AndrewVaccaro_Resume.pdf">My resume</a>
+                <a href="AndrewVaccaro_resume.pdf">My resume</a>
                 <p>Describes my education, technical skills, and past work. I'm always willing to consider new career and project opportunities.</p>
             </div>
         </div>
