--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-md-6 text-center">
                 <a href="http://minecraftu.org/">Minecraft U</a>
-                <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our free, open-source curriculum can <a href="https://github.com/MinecraftU/mcu-curriculum">here</a> on Github. </p>
+                <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our free, open-source curriculum can be found <a href="https://github.com/MinecraftU/mcu-curriculum">here</a> on Github. </p>
             </div>
             <div class="col-md-6 text-center">
                 <a href="https://github.com/atvaccaro/copper-mod">CopperMod</a>
