add initial images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<body class="text-center">
         <h1>Andrew Vaccaro</h1>
-        <img src="me.jpg" class="img-circle profile-pic padding-">
+        <img src="me.jpg" id="profile-pic" class="img-circle">
         <p id="intro">B.S. in Software Engineering from the <a href="http://www.utdallas.edu/">University of Texas at Dallas</a>. Member of the <a href="https://www.utdallas.edu/mcdermott/">McDermott Scholars</a> class of 2013. Software engineer at <a href="https://www.hpe.com/us/en/home.html">Hewlett Packard Enterprise</a> in Denver, Colorado.</p>
 
         <h3>Links</h3>
@@ -25,28 +25,34 @@
         <a href="https://www.linkedin.com/in/andrew-vaccaro-510187103/"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
         <div class="row">
             <div class="col-md-6 text-center">
-                <a href="https://mcdermottscholars.wordpress.com/">The McDermott Blog</a>
+                <h4><a href="https://mcdermottscholars.wordpress.com/">The McDermott Blog</a></h4>
                 <p>A blog written by current students in my scholarship program during college. The (usually) weekly blog showcases the experiences facilitated by the program.</p>
             </div>
             <div class="col-md-6 text-center">
-                <a href="AndrewVaccaro_resume.pdf">My resume</a>
+                <h4><a href="AndrewVaccaro_resume.pdf">My resume</a></h4>
                 <p>Describes my education, technical skills, and past work. I'm always willing to consider new career and project opportunities.</p>
             </div>
         </div>
         <h3>Projects</h3>
         <div class="row">
-            <div class="col-md-6 text-center">
-                <a href="mcdermott.andrewvaccaro.com">McDermott Network</a>
-                <p>A finalist weekend feedback application that evolved into a McDermott program information directory. The source code can be found on Github <a href="https://github.com/mcdermott-scholars/mcdermott">here</a>.</p>
+            <div class="col-md-6 text-center project">
+                <img id="mcdermott-log" src="mcdermott.png">
+                <div class="description">
+                    <h4><a href="mcdermott.andrewvaccaro.com">McDermott Network</a></h4>
+                    <p>A finalist weekend feedback application that evolved into a McDermott program information directory. The source code can be found on Github <a href="https://github.com/mcdermott-scholars/mcdermott">here</a>.</p>
+                </div>
             </div>
-            <div class="col-md-6 text-center">
-                <a href="http://minecraftu.org/">Minecraft U</a>
-                <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our free, open-source curriculum can be found <a href="https://github.com/MinecraftU/mcu-curriculum">here</a> on Github. </p>
+            <div class="col-md-6 text-center project">
+                <img src="level5.png">
+                <div class="description">
+                    <h4><a href="http://minecraftu.org/">Minecraft U</a></h4>
+                    <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our free, open-source curriculum can be found <a href="https://github.com/MinecraftU/mcu-curriculum">here</a> on Github. </p>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 text-center">
-                <a href="https://github.com/atvaccaro/copper-mod">CopperMod</a>
+            <div class="col-md-6 text-center project">
+                <h4><a href="https://github.com/atvaccaro/copper-mod">CopperMod</a></h4>
                 <p>A Minecraft mod I created while teaching Java at UTD summer camps. I was the lead instructor for the Minecraft modding camps for two summers.</p>
             </div>
         </div>
