--- a/index.html
+++ b/index.html
@@ -24,32 +24,52 @@
         <a href="https://www.gitlab.com/atvaccaro"><i class="fa fa-gitlab fa-4x" aria-hidden="true"></i></a>
         <a href="https://www.linkedin.com/in/andrew-vaccaro-510187103/"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
         <a href="AndrewVaccaro_resume.pdf"></a>
-        <div class="row">
-            <div class="col-md-6 text-center project">
-                <img id="mcdermott-logo" src="mcdermott.png">
-                <div class="description">
-                    <h4><a href="http://mcdermott.andrewvaccaro.com">McDermott Network</a></h4>
-                    <p>A finalist weekend feedback application that evolved into a McDermott program information directory. The source code can be found <a href="https://github.com/mcdermott-scholars/mcdermott">here</a> on Github.</p>
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div class="col-md-6 text-center project">
+                    <img id="mcdermott-logo" src="mcdermott.png" class="project-image">
+                    <div class="description">
+                        <h4><a href="http://mcdermott.andrewvaccaro.com">McDermott Network</a></h4>
+                        <p>A finalist weekend feedback application that evolved into a McDermott program information directory. The source code can be found <a href="https://github.com/mcdermott-scholars/mcdermott">here</a> on Github.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center project">
+                    <div class="container project-image">
+                        <div class="row">
+                            <img src="python.png" class="skill-logo">
+                            <img src="java.png" class="skill-logo">
+                        </div>
+                        <div class="row">
+                            <img src="javascript.png" class="skill-logo">
+                            <img src="tux.png" class="skill-logo">
+                        </div>
+                    </div>
+                    <div class="description">
+                        <h4><a href="AndrewVaccaro_resume.pdf">My Resume</a> </h4>
+                        <p>Describes my education, technical skills, and past work. I'm always willing to consider new career and project opportunities.</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 text-center project">
-                <img src="level5.png">
-                <div class="description">
-                    <h4><a href="http://www.minecraftu.org/">Minecraft U</a></h4>
-                    <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our free, open-source curriculum can be found <a href="https://github.com/MinecraftU/mcu-curriculum">here</a> on Github. </p>
+            <div class="row">
+                <div class="col-md-6 text-center project">
+                    <img src="level5.png" class="project-image">
+                    <div class="description">
+                        <h4><a href="http://www.minecraftu.org/">Minecraft U</a></h4>
+                        <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our free, open-source curriculum can be found <a href="https://github.com/MinecraftU/mcu-curriculum">here</a> on Github. </p>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center project">
+                    <h4><a href="https://github.com/atvaccaro/copper-mod">CopperMod</a></h4>
+                    <p>A Minecraft mod I created while teaching Java at UTD summer camps. I was the lead instructor for the Minecraft modding camps for two summers.</p>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 text-center project">
-                <h4><a href="https://github.com/atvaccaro/copper-mod">CopperMod</a></h4>
-                <p>A Minecraft mod I created while teaching Java at UTD summer camps. I was the lead instructor for the Minecraft modding camps for two summers.</p>
-            </div>
-            <div class="col-md-6 text-center project">
-                <img id="utd-logo" src="utdallas.png">
-                <div class="description">
-                    <h4><a href="https://mcdermottscholars.wordpress.com/">The McDermott Blog</a></h4>
-                    <p>A blog written by current students in my scholarship program during college. The (usually) weekly blog showcases the experiences facilitated by the program.</p>
+            <div class="row">
+                <div class="col-md-6 text-center project">
+                    <img id="utd-logo" src="utdallas.png" class="project-image">
+                    <div class="description">
+                        <h4><a href="https://mcdermottscholars.wordpress.com/">The McDermott Blog</a></h4>
+                        <p>A blog written by current students in my scholarship program during college. The (usually) weekly blog showcases the experiences facilitated by the program.</p>
+                    </div>
                 </div>
             </div>
         </div>
