--- a/index.html
+++ b/index.html
@@ -1,77 +1,81 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Andrew Vaccaro</title>
+<head>
+    <title>Andrew Vaccaro</title>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="https://use.fontawesome.com/a26f20882e.js"></script>
-        <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
-        <!--<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">-->
-        <!--<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	</head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/a26f20882e.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+</head>
 
-	<body class="text-center">
-        <h1>Andrew Vaccaro</h1>
-        <img src="me.jpg" id="profile-pic" class="img-circle">
-        <p id="intro">B.S. in Software Engineering from the <a href="http://www.utdallas.edu/">University of Texas at Dallas</a>. Member of the <a href="https://www.utdallas.edu/mcdermott/">McDermott Scholars</a> class of 2013. Software engineer at <a href="https://www.hpe.com/us/en/home.html">Hewlett Packard Enterprise</a> in Denver, Colorado.</p>
+<body class="text-center">
+<h1>Andrew Vaccaro</h1>
+<img src="me.jpg" id="profile-pic" class="img-circle">
+<p id="intro">Software engineer at <a href="https://www.hpe.com/us/en/home.html">Booz Allen Hamilton</a> in Denver,
+    Colorado. B.S. in Software Engineering from the <a href="http://www.utdallas.edu/">University of Texas at Dallas</a>.
+    Member of the <a href="https://www.utdallas.edu/mcdermott/">McDermott Scholars</a> class of 2013.</p>
 
-        <h2>Links</h2>
-        <a href="https://www.github.com/atvaccaro"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
-        <a href="https://www.gitlab.com/atvaccaro"><i class="fa fa-gitlab fa-4x" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/andrew-vaccaro-510187103/"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
-        <a href="AndrewVaccaro_resume.pdf"></a>
-        <div class="container-fluid text-center">
-            <div class="row">
-                <div class="col-md-6 text-center project">
-                    <img id="mcdermott-logo" src="mcdermott.png" class="project-image">
-                    <div class="description">
-                        <h4><a href="http://mcdermott.andrewvaccaro.com">McDermott Network</a></h4>
-                        <p>A finalist weekend feedback application that evolved into a McDermott program information directory. The source code can be found <a href="https://github.com/mcdermott-scholars/mcdermott">here</a> on Github.</p>
-                    </div>
+<h2>Links</h2>
+<a href="https://www.github.com/atvaccaro"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+<a href="https://www.linkedin.com/in/andrew-vaccaro-510187103/"><i class="fa fa-linkedin-square fa-4x"
+                                                                   aria-hidden="true"></i></a>
+<a href="AndrewVaccaro_resume.pdf"></a>
+<div class="container-fluid text-center">
+    <div class="row">
+        <div class="col-md-6 text-center project">
+            <img id="mcdermott-logo" src="mcdermott.png" class="project-image">
+            <div class="description">
+                <h4>McDermott Network</h4>
+                <p>A finalist weekend feedback application that evolved into a McDermott program information directory.
+                    The source code can be found <a href="https://github.com/mcdermott-scholars/mcdermott">here</a> on
+                    Github.</p>
+            </div>
+        </div>
+        <div class="col-md-6 text-center project">
+            <div class="container project-image">
+                <div class="row">
+                    <img src="python.png" class="skill-logo">
+                    <img src="gopher.png" class="skill-logo">
                 </div>
-                <div class="col-md-6 text-center project">
-                    <div class="container project-image">
-                        <div class="row">
-                            <img src="python.png" class="skill-logo">
-                            <img src="java.png" class="skill-logo">
-                        </div>
-                        <div class="row">
-                            <img src="javascript.png" class="skill-logo">
-                            <img src="tux.png" class="skill-logo">
-                        </div>
-                    </div>
-                    <div class="description">
-                        <h4><a href="AndrewVaccaro_resume.pdf">My Resume</a> </h4>
-                        <p>Describes my education, technical skills, and past work. I'm always willing to consider new career and project opportunities.</p>
-                    </div>
+                <div class="row">
+                    <img src="vue.png" class="skill-logo">
+                    <img src="javascript.png" class="skill-logo">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6 text-center project">
-                    <img src="level5.png" class="project-image">
-                    <div class="description">
-                        <h4><a href="http://www.minecraftu.org/">Minecraft U</a></h4>
-                        <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our free, open-source curriculum can be found <a href="https://github.com/MinecraftU/mcu-curriculum">here</a> on Github. </p>
-                    </div>
-                </div>
-                <div class="col-md-6 text-center project">
-                    <h4><a href="https://github.com/atvaccaro/copper-mod">CopperMod</a></h4>
-                    <p>A Minecraft mod I created while teaching Java at UTD summer camps. I was the lead instructor for the Minecraft modding camps for two summers.</p>
-                </div>
+            <div class="description">
+                <h4><a href="AndrewVaccaro_resume.pdf">My Resume</a></h4>
+                <p>Describes my education, technical skills, and past work. I'm always willing to consider new career
+                    and project opportunities.</p>
             </div>
-            <div class="row">
-                <div class="col-md-6 text-center project">
-                    <img id="utd-logo" src="utdallas.png" class="project-image">
-                    <div class="description">
-                        <h4><a href="https://mcdermottscholars.wordpress.com/">The McDermott Blog</a></h4>
-                        <p>A blog written by current students in my scholarship program during college. The (usually) weekly blog showcases the experiences facilitated by the program.</p>
-                    </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 text-center project">
+            <img src="level5.png" class="project-image">
+            <div class="description">
+                <h4><a href="http://www.minecraftu.org/">Minecraft U</a></h4>
+                <p>A startup in Dallas, we produce critical thinking and programming curriculum using Minecraft. Our
+                    free, open-source curriculum can be found <a href="https://github.com/MinecraftU/mcu-curriculum">here</a>
+                    on Github. </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 text-center project">
+                <img id="utd-logo" src="utdallas.png" class="project-image">
+                <div class="description">
+                    <h4><a href="https://mcdermottscholars.wordpress.com/">The McDermott Blog</a></h4>
+                    <p>A blog written by current students in my scholarship program during college. The (usually) weekly
+                        blog showcases the experiences facilitated by the program.</p>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
 </html>
