--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="text-center">
 <h1>Andrew Vaccaro</h1>
 <img src="me.jpg" id="profile-pic" class="img-circle">
-<p id="intro">Software engineer at <a href="https://www.hpe.com/us/en/home.html">Booz Allen Hamilton</a> in Denver,
+<p id="intro">Software engineer at <a href="https://www.empirichealth.com/">Empiric Health</a> in Denver,
     Colorado. B.S. in Software Engineering from the <a href="http://www.utdallas.edu/">University of Texas at Dallas</a>.
     Member of the <a href="https://www.utdallas.edu/mcdermott/">McDermott Scholars</a> class of 2013.</p>
 
